# meme-tracer

./: .gitignore  README.md  pyproject.toml
src/memetracer/: __init__.py  _memetracer.py
src/memetracer/gui/: _gui.py
tex/: .gitignore  meme-tracer-documentation-appendix.tex  meme-tracer-documentation.tex
